Tue May 28 03:11:02 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/gc_hook.c, ext/objspace/objspace.c: add new methods to
	  hook GC invocation.
	  * ObjectSpace.after_gc_start_hook=(proc)
	  * ObjectSpace.after_gc_end_hook=(proc)

	  Note that hooks are not kicked immediately. Procs are kicked
	  at postponed_job.

	  This feature is a sample of new internal event and
	  rb_postponed_job API.

Tue May 28 02:56:15 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_stat): remove wrong rest_sweep().

Tue May 28 02:44:23 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect_body): fix GC_ENABLE_LAZY_SWEEP condition.

	* gc.c (GC_NOTIFY): move debug print location and use stderr instead
	  of stdout.

Tue May 28 02:07:21 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c (rb_postponed_job_register_one): fix iteration bug.

	* ext/-test-/postponed_job/postponed_job.c,
	  test/-ext-/postponed_job/test_postponed_job.rb: add a test.

Tue May 28 00:34:23 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h, gc.c: add new internal event
	  RUBY_INTERNAL_EVENT_GC_END. This event invokes at the end of
	  after_sweep().
	  Time chart with lazy sweep is:
	    (1) Kick RUBY_INTERNAL_EVENT_GC_START
	    (2) [gc_marks()]
	    (3) [lazy_sweep()]
	    (4) [... run Ruby program (mutator) with lazy_sweep() ...]
	    (5) [after_sweep()]
	    (6) Kick RUBY_INTERNAL_EVENT_GC_END
	    (7) [... run Ruby program (mutator), and go to (1) ...]
	  Time chart without lazy sweep (GC.start, etc) is:
	    (1) Kick RUBY_INTERNAL_EVENT_GC_START
	    (2) [gc_marks()]
	    (3) [gc_sweep()]
	    (4) [after_sweep()]
	    (5) Kick RUBY_INTERNAL_EVENT_GC_END
	    (6) [... run Ruby program (mutator), and go to (1) ...]

	* ext/-test-/tracepoint/tracepoint.c,
	  test/-ext-/tracepoint/test_tracepoint.rb: modify a test.

Tue May 28 00:18:57 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c (rb_postponed_job_flush): remove a wrong comment.
