@@ -222,14 +222,14 @@ def extmake(target)
     ok &&= File.open(makefile){|f| !f.gets[DUMMY_SIGNATURE]}
     ok = yield(ok) if block_given?
     if ok
-      open(makefile, "r+") do |f|
-        s = f.read.sub!(/^(static:)\s.*/, '\1 all')
+      open(makefile, "r+b") do |f|
+        s = f.read.sub!(/^(static:)\s(?!all\b).*/, '\1 all') or break
         f.rewind
         f.print(s)
         f.truncate(f.pos)
       end
     else
-      open(makefile, "w") do |f|
+      open(makefile, "wb") do |f|
         f.puts "# " + DUMMY_SIGNATURE
 	f.print(*dummy_makefile(CONFIG["srcdir"]))
       end
